Adds samples using current apis